improve contrast for several link styles, fix #52

--- a/static/style.scss
+++ b/static/style.scss
@@ -1,7 +1,7 @@
 /* Variables */
 
 $color1: #3333CC;
-$color2: #FC4A1A;
+$color2: #D33003;
 $color3: #4ABDAC;
 $color4: #BD42BD;
 $color5: #CC3333;
@@ -310,7 +310,7 @@ p.category_name {
 
 a.category_details {
   font-weight: 300;
-  color: #888;
+  color: #6a6a6a;
   text-decoration: underline;
   font-size: 90%;
 }
